# ELFEncryTest

./: README.md  notice.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dec.c  main.c  utils.c  utils.h
app/src/main/java/com/chico/elfencrytest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
buildSrc/: build.gradle
buildSrc/src/main/java/com/chico/plugins/: NativeCodeProtectPlugin.java  NativeCodeProtectTask.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
